# stock-market-india

./: .gitignore  Cargo.toml  LICENSE
src/: main.rs
src/models/: bse.rs  common.rs  mod.rs  nse.rs
src/routes/: mod.rs
src/routes/bse/: mod.rs
src/routes/nse/: mod.rs
src/services/: mod.rs
src/services/bse/: constants.rs  mod.rs
src/services/nse/: constants.rs  mod.rs
src/utils/: http_client.rs  mod.rs
