[package]
name = "stock-market-india"
version = "0.1.0"
edition = "2021"
authors = ["Sanket Lakhera"]
description = "A Rust implementation of Indian stock market data fetcher for NSE and BSE"

[dependencies]
# Web framework
actix-web = "4.4"
# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP client
reqwest = { version = "0.12.12", features = ["json"] }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "2.0.11"
# Logging
env_logger = "0.11.6"
log = "0.4"
# Date and time
chrono = { version = "0.4", features = ["serde"] }
# HTML parsing
scraper = "0.22.0"
# CSV handling
csv = "1.3"
# Configuration
config = "0.15.6"
# Environment variables
dotenv = "0.15"
# URL encoding
urlencoding = "2.1.3"
